--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My repo documentation</title>
     <style>
-        h1{
-            
+        h1,h2{
+            text-align:center;
         }
     </style>
 </head>
@@ -14,6 +14,7 @@
     <header></header>
     <main>
         <h1>Hello, world</h1>
+        <h2>this is going to be my documentation page </h2>
     </main>
 </body>
 </html>
