--- a/Advintproto_Test/index.html
+++ b/Advintproto_Test/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Mar 08 2021 10:07:24 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="603cb70bb689ff3a1a23e13b" data-wf-site="603cb70bb689ffe8a323e13a">
+<!--  Last Published: Mon Apr 19 2021 22:53:38 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="607d2f4e96652023b283db01" data-wf-site="603cb70bb689ffe8a323e13a">
 <head>
   <meta charset="utf-8">
   <title>Advint_Documentation</title>
@@ -14,42 +14,32 @@
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body><img src="images/Logo.png" loading="lazy" alt="" class="logo">
-  <div class="section">
-    <div class="container w-container">
-      <div class="div-block"></div>
-    </div>
-  </div>
-  <div class="w-layout-grid grid">
-    <div id="w-node-_0a6bc5c4-3a1b-717c-686d-742fa0ff1c68-1a23e13b" class="div-block-2">
-      <h1 class="heading">Hi This is<br>Feather’s<br>documentation for<br>Adv Interactive<br>Prototyping</h1>
-      <div class="home_divider"></div>
-    </div>
-    <a href="project1.html" class="w-inline-block">
-      <div class="div-block-3">
-        <div class="home_divider"></div>
-        <div class="div-block-9"><img src="images/rabbit.png" loading="lazy" alt="" class="image-3"></div>
-        <h3 class="home_heading2">Project 1</h3>
-      </div>
+<body class="body-2"><img src="images/Logo.png" loading="lazy" alt="" class="logo">
+  <div class="w-layout-grid home_grid">
+    <a href="#" class="link-block-7 w-inline-block">
+      <h1 class="heading-38">Hi This is Feather’s documentation for Adv Interactive Prototyping</h1>
+      <div class="div-block-42"></div>
     </a>
-    <a href="project2.html" class="w-inline-block">
-      <div class="div-block-4"><img src="images/Project2_Cover.png" loading="lazy" srcset="images/Project2_Cover.png 500w, images/Project2_Cover.png 800w, images/Project2_Cover.png 1202w" sizes="80px" alt="" class="image-19">
-        <div class="home_divider"></div>
-        <h3 class="home_heading2">Project 2</h3>
-      </div>
+    <a href="project1.html" class="link-block-3 w-inline-block"><img src="images/Project1_Rabbit.png" loading="lazy" alt="" class="image-24">
+      <h2 class="heading-34">Project 1</h2>
+      <div class="div-block-42"></div>
     </a>
-    <div class="div-block-5">
-      <div class="home_divider"></div>
-      <h3 class="home_heading2">Readings</h3>
-    </div>
-    <div class="div-block-6">
-      <div class="home_divider"></div>
-      <h3 class="home_heading2">Project 3</h3>
-    </div>
-    <div class="div-block-7">
-      <div class="home_divider"></div>
-      <h3 class="home_heading2">Project 4</h3>
-    </div>
+    <a href="project2.html" class="link-block-4 w-inline-block"><img src="images/Project2_dot.png" loading="lazy" alt="" class="image-24">
+      <h2 class="heading-35">Project 2</h2>
+      <div class="div-block-42"></div>
+    </a>
+    <a href="readings.html" class="link-block-8 w-inline-block">
+      <h1 class="heading-38">Readings</h1>
+      <div class="div-block-42"></div>
+    </a>
+    <a href="project3.html" class="link-block-6 w-inline-block"><img src="images/Project3_Cover.png" loading="lazy" alt="" class="image-24">
+      <h2 class="heading-37">Project 3</h2>
+      <div class="div-block-42"></div>
+    </a>
+    <a href="project.html" class="link-block-5 w-inline-block"><img src="images/Project4_rabbit.png" loading="lazy" alt="" class="image-24">
+      <h2 class="heading-36">Project 4</h2>
+      <div class="div-block-42"></div>
+    </a>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=603cb70bb689ffe8a323e13a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
