--- a/Advintproto_Test/project1.html
+++ b/Advintproto_Test/project1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Mar 08 2021 10:07:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Apr 19 2021 22:53:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="603cd21f48b1e8160f5ba668" data-wf-site="603cb70bb689ffe8a323e13a">
 <head>
   <meta charset="utf-8">
@@ -159,8 +159,8 @@
     <div class="customcontainer">
       <div class="text-block-2">Feather&#x27;s documentary for Adv Int Prototyping.</div>
       <a href="project2.html" class="link-block w-inline-block">
-        <div class="div-block-29">
-          <h1 class="heading-20">PROJECT TWO</h1>
+        <div class="p1_link">
+          <h1 class="heading-20">NEXT PROJECT</h1>
         </div>
       </a>
     </div>
