--- a/Advintproto_Test/project2.html
+++ b/Advintproto_Test/project2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Mar 08 2021 10:07:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Apr 19 2021 22:53:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6045640d7f4f0739ba379bfe" data-wf-site="603cb70bb689ffe8a323e13a">
 <head>
   <meta charset="utf-8">
@@ -50,12 +50,12 @@
   </div>
   <div class="section-11">
     <div class="customcontainer">
-      <div class="w-layout-grid grid-11">
+      <div class="w-layout-grid grid-11-project2">
         <div id="w-node-_3c35a7f1-81d1-97de-27ef-0f3a3eebb2d3-ba379bfe" class="div-block-33">
-          <h1 class="heading-28">INSPIRATION</h1>
+          <h1 class="heading-28-project2">INSPIRATION</h1>
           <p class="paragraph-14">I got the inspiration when i was tidying up my documents and saw my Artcenter offer by chance. <br><br>I love patterns, and these dots reminds me the artwork from Yayoi Kusama and her bold color choice. I think it&#x27;s interesting to explore it in processing and the controllers.  if users could play with it, it would be very fascinating. That&#x27;s how I got my inspiration and decide to work on this topic.</p>
         </div>
-        <div><img src="images/ArtcenterOffer.png" loading="lazy" sizes="100vw" srcset="images/ArtcenterOffer.png 500w, images/ArtcenterOffer.png 800w, images/ArtcenterOffer.png 1080w, images/ArtcenterOffer.png 1388w" alt=""></div>
+        <div><img src="images/ArtcenterOffer.png" loading="lazy" sizes="100vw" srcset="images/ArtcenterOffer-p-500.png 500w, images/ArtcenterOffer-p-800.png 800w, images/ArtcenterOffer-p-1080.png 1080w, images/ArtcenterOffer.png 1388w" alt=""></div>
         <div><img src="images/yayoi-kusama-dots.jpg" loading="lazy" alt="" class="image-11"></div>
       </div>
     </div>
@@ -104,10 +104,10 @@
   </div>
   <div class="section-14">
     <div class="customcontainer">
-      <div class="w-layout-grid grid-13">
-        <div id="w-node-e86a13e4-551a-3dce-9744-82e88a928693-ba379bfe"><img src="images/BoxPlanning.jpg" loading="lazy" sizes="100vw" srcset="images/BoxPlanning.jpg 500w, images/BoxPlanning.jpg 800w, images/BoxPlanning.jpg 1080w" alt=""></div>
+      <div class="w-layout-grid project2_grid">
+        <div id="w-node-e86a13e4-551a-3dce-9744-82e88a928693-ba379bfe"><img src="images/BoxPlanning.jpg" loading="lazy" sizes="(max-width: 1080px) 100vw, 1080px" srcset="images/BoxPlanning-p-500.jpeg 500w, images/BoxPlanning-p-800.jpeg 800w, images/BoxPlanning.jpg 1080w" alt=""></div>
         <div><img src="images/breadboard.png" loading="lazy" alt=""></div>
-        <div><img src="images/Box.png" loading="lazy" sizes="100vw" srcset="images/Box.png 500w, images/Box.png 784w" alt=""></div>
+        <div><img src="images/Box.png" loading="lazy" sizes="(max-width: 991px) 100vw, 783.96484375px" srcset="images/Box-p-500.png 500w, images/Box.png 784w" alt=""></div>
       </div>
     </div>
   </div>
@@ -121,7 +121,7 @@
         <div id="w-node-_77b3d288-c8ef-7f98-d4d8-b902dadc48cb-ba379bfe">
           <p class="paragraph-18">Create the patterns in processing, use mouseX and mouseY to replace the interactions that I want to explore later</p>
         </div>
-        <div id="w-node-e6883b98-650a-0e35-a14a-3e090bf3105b-ba379bfe" class="div_process_2"><img src="images/Stage-one.png" loading="lazy" sizes="(max-width: 767px) 7.96875px, 1vw" srcset="images/Stage-one.png 500w, images/Stage-one.png 638w" alt="" class="image-15"></div>
+        <div id="w-node-e6883b98-650a-0e35-a14a-3e090bf3105b-ba379bfe" class="div_process_2"><img src="images/Stage-one.png" loading="lazy" sizes="(max-width: 479px) 77vw, (max-width: 767px) 84vw, 645.95703125px" srcset="images/Stage-one-p-500.png 500w, images/Stage-one.png 638w" alt="" class="image-15"></div>
         <div id="w-node-_77638c9d-9c83-9a2d-2df9-26898fadea91-ba379bfe">
           <p class="paragraph-18">Go to <a href="http://particle.io/" target="_blank">particle.io</a> to set up the board and the photon, connect all the materials that I want to use.</p>
         </div>
@@ -129,11 +129,11 @@
           <p class="paragraph-18">Set the final physical bread board according to previous steps.</p>
         </div>
         <div id="w-node-_2e51c0c2-fcda-6673-99ce-c46b1c8fb0bc-ba379bfe" class="div_process_2"><img src="images/Stage-two.png" loading="lazy" alt="" class="image-14"></div>
-        <div id="w-node-efaba516-0ad0-9207-f7ea-cad5f5e00048-ba379bfe" class="div_process_2"><img src="images/Stage-three.png" loading="lazy" sizes="(max-width: 767px) 10px, 1vw" srcset="images/Stage-three.png 500w, images/Stage-three.png 624w" alt="" class="image-16"></div>
+        <div id="w-node-efaba516-0ad0-9207-f7ea-cad5f5e00048-ba379bfe" class="div_process_2"><img src="images/Stage-three.png" loading="lazy" sizes="(max-width: 479px) 77vw, (max-width: 767px) 83vw, 633.984375px" srcset="images/Stage-three-p-500.png 500w, images/Stage-three.png 624w" alt="" class="image-16"></div>
         <div id="w-node-de26bc56-1d6e-b401-d609-d125aace598f-ba379bfe">
           <p class="paragraph-18">Try the layout and connection on trinket board, see if it works</p>
         </div>
-        <div id="w-node-_9d8d4a14-3214-376f-b28e-369998fa136e-ba379bfe" class="div_process_2"><img src="images/Stage-four.jpg" loading="lazy" sizes="(max-width: 767px) 10px, 1vw" srcset="images/Stage-four.jpg 500w, images/Stage-four.jpg 800w, images/Stage-four.jpg 1080w, images/Stage-four.jpg 1125w" alt="" class="image-17"></div>
+        <div id="w-node-_9d8d4a14-3214-376f-b28e-369998fa136e-ba379bfe" class="div_process_2"><img src="images/Stage-four.jpg" loading="lazy" sizes="(max-width: 479px) 77vw, (max-width: 767px) 86vw, (max-width: 991px) 89vw, 90vw" srcset="images/Stage-four-p-500.jpeg 500w, images/Stage-four-p-800.jpeg 800w, images/Stage-four-p-1080.jpeg 1080w, images/Stage-four.jpg 1125w" alt="" class="image-17"></div>
       </div>
     </div>
   </div>
@@ -182,7 +182,7 @@
     <div class="customcontainer">
       <div class="text-block-2">Feather&#x27;s documentary for Adv Int Prototyping.</div>
       <div class="div-block-29">
-        <h1 class="heading-20">Next Project</h1>
+        <a href="project3.html" class="link-2"><strong>NEXT PROJECT</strong></a>
       </div>
     </div>
   </div>
